landscape paints but slow

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
 
 <h1>JS Lunar Lander</h1>
 <p class="atari">&copy; 2018 Mike McAllister v1.0</p>
-<canvas id="game" width="800" height="500"></canvas>
+<canvas id="game"></canvas>
 
 </body>
 
