--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
 <h1>JS Lunar Lander</h1>
 <p class="atari">&copy; 2018 Mike McAllister v1.0</p>
 <canvas id="game"></canvas>
-
+<div class="infobox"></div> 
 </body>
 
  <script src="js/script.min.js"></script>
